# dgdo

./: LICENSE  README.md  architecture_20251125.md  docker-compose.yml  prompts.txt  roadmap_20251125.md  setup.cmd
admin/: dockerfile
admin-frontend/: dockerfile  package.json
admin-frontend/public/: index.html
admin-frontend/src/: App.jsx
admin/app/: main.py
api/: dockerfile
api/app/: main.py
backend/: docker-compose.yml  git.txt  requirements.txt
backend/config/: pricing_config_khujand_v1.yaml  pricing_config_loader.py
backend/docker/: ml_feedback_service.Dockerfile  postgres_postgis.Dockerfile  python_base.Dockerfile  trip_service.Dockerfile
backend/docs/: DG Do Pilot Launch.md  dgdo_admin_panel_react.md  dgdo_differential_games_02.md  dgdo_how_to_run_project_on_Ubuntu.md  dgdo_mvp_full_codebase.md  dgdo_rules_2.md
backend/protos/: admin.proto  common.proto  driver_status.proto  matching.proto  ml_feedback.proto  pricing.proto  telemetry.proto  trip_request.proto
backend/services/cpp/: CMakeLists.txt  matching_server.cpp
backend/tests/: test_end2end_realtime.py  test_full_flow.py  test_realtime_concurrent.py  test_realtime_geospatial.py  test_realtime_logged.py
backend/workflow/: trip_workflow_1.py  trip_workflow_2.py
db/: init.sql
db-postgresql/: init-postgresql.sql
db/init/: 001_init_schema.sql  insert_example_1.sql
docker/: matching_service.Dockerfile  telemetry_service.Dockerfile  trip_request_service.Dockerfile  trip_service.Dockerfile
docs/: dgdo_architecture_20251125.md  dgdo_differential_games_01.md  dgdo_differential_games_03.md  dgdo_failure_mode_01.md  dgdo_how_to_run_project_on_Ubuntu.md  dgdo_how_to_run_project_on_Windows.md  dgdo_json_01.md  dgdo_json_02.md  dgdo_mvp_full_codebase.md  dgdo_rules.md  dgdo_rules_2.md  dgdo_saga.md
docs/WebSocket/: message schemas.md  ws_grpc_integration_with_cpp_and_docker.py
docs/architecture/: Administrator.md  DG Do_Formal Trip State Machine (MVP).md  Driver API List.md  Passenger.md  dgdo_ER_diagram.md  dgdo_Matching.md  dgdo_Passenger API List.md  dgdo_architecture_20251130.md  dgdo_classes_diagram.md  dgdo_mvp_sequence_v1.mmd  dgdo_service_interaction.md
docs/tasks/: 200 advanced-level tasks.txt  Advanced-level tasks B.txt  Advanced-level tasks C.txt  Analytics ML 70 tasks B.txt  FastAPI CPP 60 tasks.txt  Intermediate-level tasks.txt  (+5 more)
examples/cpp-api-docker-example/: CMakeLists.txt  README.md  docker-compose.yml  dockerfile  main.cc  main.cpp
examples/cpp-grpc-fastapi-example/cpp-server/: CMakeLists.txt  Dockerfile  main.cpp
examples/cpp-grpc-server/: CMakeLists.txt  README.md  hello_pb2_grpc.py  test_client.py
matching/: CMakeLists.txt  dockerfile
prompts/: DG Do Strategic Advisor.txt  prompts.txt
protos/: README.md  admin.proto  common.proto  driver_status.proto  matching.proto  ml_feedback.proto  notifications.proto  pricing.proto  telemetry.proto  trip.proto  trip_request.proto  trip_service.proto  user.proto
roadmap/: roadmap_20251125.md
tests/: test_end2end_1.py  test_end2end_2.py  test_end2end_concurrent.py  test_realtime_geospatial_2.py  test_trip_request.py
workflow/: trip_workflow_3.py  trip_workflow_4.py
(+97 files in other folders)
